--- a/style.css
+++ b/style.css
@@ -137,6 +137,12 @@ body {
     height: 250px;
 }
 
+@media (max-width: 768px) {
+    .map-container iframe {
+        height: 350px;
+    }
+}
+
 .map-external-link {
     display: inline-block;
     text-decoration: none;
